...
            _section(
              context,
              title: 'Thông báo',
              children: [
                _SwitchTile(
                  icon: Icons.notifications_outlined,
                  title: 'Thông báo giao dịch',
                  value: vm.isNotificationEnabled,
                  onChanged: vm.updateNotificationEnabled,
                ),
                _SwitchTile(
                  icon: Icons.chat_outlined,
                  title: 'Thông báo tin nhắn',
                  value: vm.isNotificationEnabled,
                  onChanged: vm.updateNotificationEnabled,
                ),
                _SwitchTile(
                  icon: Icons.local_offer_outlined,
                  title: 'Thông báo đề nghị',
...
